--- a/UnityAI/Packages/AI/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uxml
+++ b/UnityAI/Packages/AI/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uxml
@@ -10,7 +10,7 @@
         <uie:ToolbarSpacer style="flex-grow: 1;" />
         <uie:ToolbarButton text="Help" display-tooltip-when-elided="true" name="Help" />
     </uie:Toolbar>
-    <ui:VisualElement name="Content" class="Content debug" style="flex-grow: 1;">
-        <Megumin.GameFramework.AI.BehaviorTree.Editor.BehaviourTreeView class="debug" />
+    <ui:VisualElement name="Content" class="Content">
+        <Megumin.GameFramework.AI.BehaviorTree.Editor.BehaviourTreeView />
     </ui:VisualElement>
 </ui:UXML>
