--- a/UnityAI/Packages/AI/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
+++ b/UnityAI/Packages/AI/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
@@ -1,11 +1,19 @@
+.Content {
+    flex-grow: 1;
+}
+
+BehaviourTreeView {
+    flex-grow: 1;
+}
+
 BehaviourTreeView > GridBackground {
     --grid-background-color: rgb(40, 40, 40);
     --line-color: rgba(193, 196, 192, 0.1);
     --thick-line-color: rgba(193, 196, 192, 0.1);
     --spacing: 15;
-    background-color: rgba(207, 44, 44, 255);
-    -unity-text-outline-color: rgba(219, 22, 22, 255);
-    -unity-background-image-tint-color: rgba(190, 17, 159, 255);
+    background-color: rgb(207, 44, 44);
+    -unity-text-outline-color: rgb(219, 22, 22);
+    -unity-background-image-tint-color: rgb(190, 17, 159);
     width: auto;
     display: flex;
     visibility: visible;
@@ -13,16 +21,14 @@ BehaviourTreeView > GridBackground {
     opacity: 0.97;
 }
 
-BehaviourTreeView {
-    flex-grow: 1;
-}
-
-/*BehaviourTreeView GridBackground {
-    background-color: rgba(27, 150, 150, 0.719);
-    --spacing:20; 
-    --grid-background-color: rgba(27, 150, 150, 0.719);
-}*/
-
-.debug {
-    background-color: rgba(10, 158, 158, 0.377);
+BehaviourTreeView > .debug {
+    border-left-color: rgb(255, 0, 0);
+    border-right-color: rgb(255, 0, 0);
+    border-top-color: rgb(255, 0, 0);
+    border-bottom-color: rgb(255, 0, 0);
+    color: rgb(255, 0, 0);
+    border-left-width: 2px;
+    border-right-width: 2px;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
 }
