使用后代选择器

--- a/UnityAI/Packages/AI/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
+++ b/UnityAI/Packages/AI/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
@@ -6,7 +6,7 @@ BehaviourTreeView {
     flex-grow: 1;
 }
 
-BehaviourTreeView > GridBackground {
+BehaviourTreeView GridBackground {
     --grid-background-color: rgb(40, 40, 40);
     --line-color: rgba(193, 196, 192, 0.1);
     --thick-line-color: rgba(193, 196, 192, 0.1);
@@ -21,7 +21,7 @@ BehaviourTreeView > GridBackground {
     opacity: 0.97;
 }
 
-BehaviourTreeView > .debug {
+BehaviourTreeView .debug {
     border-left-color: rgb(255, 0, 0);
     border-right-color: rgb(255, 0, 0);
     border-top-color: rgb(255, 0, 0);
