--- a/UnityAI/Packages/AI/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uxml
+++ b/UnityAI/Packages/AI/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uxml
@@ -1,14 +1,15 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss?fileID=7433441132597879392&amp;guid=132ed6f68d8f6db4d8135ba9b7ab7781&amp;type=3#BehaviorTreeEditor" />
     <uie:Toolbar>
-        <uie:ToolbarMenu tabindex="-1" display-tooltip-when-elided="true" text="File" name="File" />
-        <uie:ToolbarMenu tabindex="-1" display-tooltip-when-elided="true" text="Edit" name="Edit" />
+        <uie:ToolbarMenu tabindex="-1" display-tooltip-when-elided="true" text="File" name="file" />
+        <uie:ToolbarMenu tabindex="-1" display-tooltip-when-elided="true" text="Edit" name="edit" />
         <uie:ToolbarSpacer />
         <uie:ToolbarButton text="Button" display-tooltip-when-elided="true" />
         <uie:ToolbarSpacer />
         <uie:ToolbarButton text="Button" display-tooltip-when-elided="true" />
         <uie:ToolbarSpacer style="flex-grow: 1;" />
-        <uie:ToolbarButton text="Help" display-tooltip-when-elided="true" name="Help" />
+        <uie:ToolbarButton text="Test" display-tooltip-when-elided="true" name="test" />
+        <uie:ToolbarButton text="Help" display-tooltip-when-elided="true" name="help" />
     </uie:Toolbar>
-    <Megumin.GameFramework.AI.BehaviorTree.Editor.BehaviourTreeView class="BehaviourTreeView" />
+    <Megumin.GameFramework.AI.BehaviorTree.Editor.BehaviorTreeView class="behaviorTreeView" />
 </ui:UXML>
