--- a/UnityAI/Packages/AI/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
+++ b/UnityAI/Packages/AI/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
@@ -1,3 +1,21 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:Button text="Button" display-tooltip-when-elided="true" />
+    <ui:VisualElement name="node-border">
+      <ui:VisualElement name="title">
+        <ui:Label name="title-label" text="TestNode" class="unity-text-element unity-label" />
+        <ui:VisualElement name="title-button-container">
+          <ui:VisualElement name="collapse-button">
+            <ui:VisualElement name="icon" />
+          </ui:VisualElement>
+        </ui:VisualElement>
+      </ui:VisualElement>
+      <ui:VisualElement name="contents">
+        <ui:VisualElement name="divider" class="horizontal" />
+        <ui:VisualElement name="top">
+          <ui:VisualElement name="input" />
+          <ui:VisualElement name="divider" class="vertical" />
+          <ui:VisualElement name="output" />
+        </ui:VisualElement>
+      </ui:VisualElement>
+    </ui:VisualElement>
+    <ui:VisualElement name="selection-border" />
 </ui:UXML>
