--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
@@ -40,3 +40,21 @@ BehaviorTreeView .debug {
     visibility: visible;
     display: none;
 }
+
+/*#connector.connectorBox {
+    background-color: rgb(49, 204, 190);
+    opacity: 1;
+    min-width: 60px;
+}*/
+
+.port:hover > #connector.connectorBox {
+    border-left-color: rgb(255, 0, 0);
+    border-right-color: rgb(255, 0, 0);
+    border-top-color: rgb(255, 0, 0);
+    border-bottom-color: rgb(255, 0, 0);
+    background-color: rgb(21, 233, 134);
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
