--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
@@ -1,25 +1,25 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss?fileID=7433441132597879392&amp;guid=2c83cb8392a86ce4fbab7c0424257963&amp;type=3#BehaviorTreeNodeView" />
     <ui:VisualElement name="node-border">
-        <ui:VisualElement name="input" style="flex-direction: column; align-items: center;" />
-        <ui:VisualElement name="decorator" style="border-left-color: rgb(109, 226, 39); border-right-color: rgb(109, 226, 39); border-top-color: rgb(109, 226, 39); border-bottom-color: rgb(109, 226, 39); border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px;">
-            <ui:ListView focusable="true" style="border-left-color: rgb(62, 164, 190); border-right-color: rgb(62, 164, 190); border-top-color: rgb(62, 164, 190); border-bottom-color: rgb(62, 164, 190); border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; max-height: none; margin-left: 10px; margin-right: 10px; margin-bottom: 5px; margin-top: 5px;" />
-        </ui:VisualElement>
-        <ui:VisualElement name="title">
-            <ui:Label name="title-label" text="TestNode" class="unity-text-element unity-label" />
-            <ui:VisualElement name="title-button-container">
-                <ui:VisualElement name="collapse-button">
-                    <ui:VisualElement name="icon" />
+        <ui:VisualElement name="top">
+            <ui:VisualElement name="input" style="flex-direction: column; align-items: center;" />
+            <ui:VisualElement name="divider" class="vertical" />
+            <ui:VisualElement name="decorator" style="border-left-color: rgb(109, 226, 39); border-right-color: rgb(109, 226, 39); border-top-color: rgb(109, 226, 39); border-bottom-color: rgb(109, 226, 39); border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; display: none;">
+                <ui:ListView focusable="true" style="border-left-color: rgb(62, 164, 190); border-right-color: rgb(62, 164, 190); border-top-color: rgb(62, 164, 190); border-bottom-color: rgb(62, 164, 190); border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; max-height: none; margin-left: 10px; margin-right: 10px; margin-bottom: 5px; margin-top: 5px;" />
+            </ui:VisualElement>
+            <ui:VisualElement name="title">
+                <ui:Label name="title-label" text="TestNode" class="unity-text-element unity-label" />
+                <ui:VisualElement name="title-button-container">
+                    <ui:VisualElement name="collapse-button">
+                        <ui:VisualElement name="icon" />
+                    </ui:VisualElement>
                 </ui:VisualElement>
             </ui:VisualElement>
-        </ui:VisualElement>
-        <ui:VisualElement name="contents">
-            <ui:VisualElement name="divider" class="horizontal" />
-            <ui:VisualElement name="top">
-                <ui:VisualElement name="divider" class="vertical" />
+            <ui:VisualElement name="contents">
+                <ui:VisualElement name="divider" class="horizontal" />
             </ui:VisualElement>
+            <ui:VisualElement name="output" style="align-items: center;" />
         </ui:VisualElement>
-        <ui:VisualElement name="output" style="align-items: center;" />
     </ui:VisualElement>
     <ui:VisualElement name="selection-border" picking-mode="Ignore" />
 </ui:UXML>
