--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uxml
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uxml
@@ -2,6 +2,12 @@
     <Style src="project://database/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss?fileID=7433441132597879392&amp;guid=132ed6f68d8f6db4d8135ba9b7ab7781&amp;type=3#BehaviorTreeEditor" />
     <Style src="project://database/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss?fileID=7433441132597879392&amp;guid=2c83cb8392a86ce4fbab7c0424257963&amp;type=3#BehaviorTreeNodeView" />
     <uie:Toolbar name="toolbar">
+        <uie:ToolbarButton text="Save Asset" display-tooltip-when-elided="true" name="saveAsset" />
+        <uie:ToolbarSpacer />
+        <uie:ToolbarMenu tabindex="-1" display-tooltip-when-elided="true" text="Save As..." name="saveAs" />
+        <uie:ToolbarSpacer />
+        <uie:ToolbarButton text="Show In Project" display-tooltip-when-elided="true" name="showInProject" />
+        <uie:ToolbarSpacer />
         <uie:ToolbarMenu tabindex="-1" display-tooltip-when-elided="true" text="File" name="file" />
         <uie:ToolbarMenu tabindex="-1" display-tooltip-when-elided="true" text="Edit" name="edit" />
         <uie:ToolbarSpacer />
