快速打开测试资源

--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
@@ -72,6 +72,6 @@ BehaviorTreeView .debug {
     align-items: center;
 }
 
-.startNode {
-    background-color: rgba(24, 90, 106, 255);
+.startNode #title{
+    background-color:rgba(8, 92, 141, 0.753);
 }
