--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -1,5 +1,15 @@
 .node .port {
     flex-grow: 1;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-left-color: rgb(65, 212, 35);
+    border-right-color: rgb(65, 212, 35);
+    border-top-color: rgb(65, 212, 35);
+    border-bottom-color: rgb(65, 212, 35);
+    border-left-width: 1px;
+    border-right-width: 1px;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
 }
 
 #connector.connectorBox {
@@ -11,25 +21,27 @@
     display: none;
 }
 
-.port:hover > #connector.connectorBox {
-    border-left-color: rgb(255, 0, 0);
-    border-right-color: rgb(255, 0, 0);
-    border-top-color: rgb(255, 0, 0);
-    border-bottom-color: rgb(255, 0, 0);
-    background-color: rgb(21, 233, 134);
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-}
-
 .port #cap {
     width: 100%;
     height: 100%;
 }
 
-.port .connectorBox {
-    min-height: 24px;
+.port > #connector.connectorBox {
+    flex-grow: 1;
+    border: 0;
+    border-left-width: 0;
+    border-right-width: 0;
+    border-top-width: 0;
+    border-bottom-width: 0;
+    background-color: rgb(154, 154, 154);
+    border-top-left-radius: 4;
+    border-bottom-left-radius: 4;
+    border-top-right-radius: 4;
+    border-bottom-right-radius: 4;
+}
+
+.port > #connector.connectorBox:hover {
+    background-color: rgb(210, 180, 1);
 }
 
 .port > #type {
@@ -72,5 +84,5 @@
 }
 
 .portContainer {
-    background-color: rgba(99, 99, 99, 255);
+    background-color: rgb(99, 99, 99);
 }
