--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -33,11 +33,12 @@
     border-right-width: 0;
     border-top-width: 0;
     border-bottom-width: 0;
-    background-color: rgb(154, 154, 154);
+    background-color: rgb(33, 33, 33);
     border-top-left-radius: 4;
     border-bottom-left-radius: 4;
     border-top-right-radius: 4;
     border-bottom-right-radius: 4;
+    align-items: auto;
 }
 
 .port > #connector.connectorBox:hover {
@@ -84,5 +85,5 @@
 }
 
 .portContainer {
-    background-color: rgb(99, 99, 99);
+    background-color: rgb(7, 7, 7);
 }
