--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -6,10 +6,10 @@
     border-right-color: rgb(65, 212, 35);
     border-top-color: rgb(65, 212, 35);
     border-bottom-color: rgb(65, 212, 35);
-    border-left-width: 1px;
-    border-right-width: 1px;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
+    border-left-width: 0;
+    border-right-width: 0;
+    border-top-width: 0;
+    border-bottom-width: 0;
 }
 
 #connector.connectorBox {
@@ -24,6 +24,7 @@
 .port #cap {
     width: 100%;
     height: 100%;
+    display: none;
 }
 
 .port > #connector.connectorBox {
@@ -38,7 +39,8 @@
     border-bottom-left-radius: 4;
     border-top-right-radius: 4;
     border-bottom-right-radius: 4;
-    align-items: auto;
+    align-items: center;
+    min-width: 80px;
 }
 
 .port > #connector.connectorBox:hover {
