不同类型节点使用不同背景色

--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -12,6 +12,14 @@
     border-bottom-width: 0;
 }
 
+.node.ActionTaskNode #title {
+    background-color: rgb(96, 45, 160);
+}
+
+.node.BTParentNode #title {
+    background-color: rgb(64, 64, 64);
+}
+
 #connector.connectorBox {
     min-width: 0;
 }
