--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -10,6 +10,7 @@
     border-right-width: 0;
     border-top-width: 0;
     border-bottom-width: 0;
+    height: 18px;
 }
 
 .node.ActionTaskNode #title {
