增加装饰器背景色

--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
@@ -1,10 +1,11 @@
 .border {
-    border-left-color: rgb(212, 79, 79);
-    border-right-color: rgb(212, 79, 79);
-    border-top-color: rgb(212, 79, 79);
-    border-bottom-color: rgb(212, 79, 79);
-    border-left-width: 1px;
-    border-right-width: 1px;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
+}
+
+BehaviorTreeDecoratorView {
+    margin-top: 1px;
+    margin-bottom: 4px;
+}
+
+#contentContainer {
+    background-color: rgb(0, 59, 136);
 }
