--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -1,3 +1,20 @@
+.node #node-border {
+    background-color: rgb(64, 64, 64);
+}
+
+.node #title {
+    border-left-width: 1px;
+    border-right-width: 1px;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-left-color: rgba(24, 24, 24, 255);
+    border-right-color: rgba(24, 24, 24, 255);
+    border-top-color: rgba(24, 24, 24, 255);
+    border-bottom-color: rgba(24, 24, 24, 255);
+    margin-left: 6px;
+    margin-right: 6px;
+}
+
 .node .port {
     flex-grow: 1;
     margin-left: 20px;
@@ -68,15 +85,11 @@
     border-right-color: rgb(0, 58, 134);
     border-top-color: rgb(0, 58, 134);
     border-bottom-color: rgb(0, 58, 134);
-    border-left-width: 4px;
-    border-right-width: 4px;
-    border-top-width: 4px;
-    border-bottom-width: 4px;
+    border-left-width: 0;
+    border-right-width: 0;
+    border-top-width: 0;
+    border-bottom-width: 0;
     max-height: none;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 0;
-    margin-top: 0;
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px;
     border-top-right-radius: 6px;
@@ -91,6 +104,6 @@
     flex-direction: column-reverse;
 }
 
-.portContainer {
+/*.portContainer {
     background-color: rgb(7, 7, 7);
-}
+}*/
