--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -89,6 +89,8 @@
 }
 
 .decoratorContainer {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .decoratorList {
@@ -105,6 +107,38 @@
     border-bottom-left-radius: 6px;
     border-top-right-radius: 6px;
     border-bottom-right-radius: 6px;
+}
+
+.decoratorList #unity-content-container {
+    /*border-left-width: 2px;
+    border-right-width: 2px;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    border-left-color: rgba(0, 59, 136, 255);
+    border-right-color: rgba(0, 59, 136, 255);
+    border-top-color: rgba(0, 59, 136, 255);
+    border-bottom-color: rgba(0, 59, 136, 255);
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;*/
+}
+
+.decoratorList #unity-list-view__reorderable-item {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.decoratorList #unity-list-view__reorderable-handle {
+    display: none;
+    visibility: hidden;
+}
+
+.decoratorList #unity-list-view__reorderable-item__container {
+    padding-left: 1px;
+    padding-right: 1px;
 }
 
 #input > .port {
