--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -1,4 +1,4 @@
-.node #node-border {
+﻿.node #node-border {
     background-color: rgba(64, 64, 64, 0.75);
 }
 
@@ -89,8 +89,13 @@
 }
 
 .decoratorContainer {
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: rgba(64, 64, 64, 0.65);
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
 .decoratorList {
@@ -109,7 +114,7 @@
     border-bottom-right-radius: 6px;
 }
 
-.decoratorList #unity-content-container {
+.decoratorList #unity-content-container #注释{
     /*border-left-width: 2px;
     border-right-width: 2px;
     border-top-width: 2px;
