--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -26,27 +26,30 @@
     padding-left: 20px;
 }
 
-.node .port {
-    flex-grow: 1;
-    margin-left: 20px;
-    margin-right: 20px;
-    border-left-color: rgb(65, 212, 35);
-    border-right-color: rgb(65, 212, 35);
-    border-top-color: rgb(65, 212, 35);
-    border-bottom-color: rgb(65, 212, 35);
-    border-left-width: 0;
-    border-right-width: 0;
-    border-top-width: 0;
-    border-bottom-width: 0;
-    height: 18px;
-}
-
 .node.ActionTaskNode #title {
     background-color: rgb(96, 45, 160);
 }
 
 .node.BTParentNode #title {
     background-color: rgb(64, 64, 64);
+}
+
+.node .portContainer {
+    max-height: 18px;
+}
+
+#input > .port {
+    flex-direction: column;
+}
+
+#output > .port {
+    flex-direction: column-reverse;
+}
+
+.node .port {
+    flex-grow: 1;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 #connector.connectorBox {
@@ -115,7 +118,7 @@
 }
 
 .decoratorList #unity-content-container #注释{
-    /*border-left-width: 2px;
+    border-left-width: 2px;
     border-right-width: 2px;
     border-top-width: 2px;
     border-bottom-width: 2px;
@@ -126,7 +129,7 @@
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;*/
+    border-bottom-right-radius: 4px;
 }
 
 .decoratorList #unity-list-view__reorderable-item {
@@ -146,10 +149,12 @@
     padding-right: 1px;
 }
 
-#input > .port {
-    flex-direction: column;
+.decoratorList .unity-scroller #注释{
+    display: none;
+    visibility: hidden;
+    overflow: hidden;
+    position: absolute;
 }
 
-#output > .port {
-    flex-direction: column-reverse;
-}
+
+
