--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
@@ -30,3 +30,34 @@ BehaviorTreeDecoratorView {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
+
+.markLabel {
+    border-left-color: rgba(107, 24, 108, 255);
+    border-right-color: rgba(107, 24, 108, 255);
+    border-top-color: rgba(107, 24, 108, 255);
+    border-bottom-color: rgba(107, 24, 108, 255);
+    border-left-width: 1px;
+    border-right-width: 1px;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    background-color: rgba(36, 159, 188, 255);
+}
+
+.markContainer {
+    flex-direction: row;
+    flex-shrink: 0;
+    right: 0;
+    position: relative;
+    border-left-width: 2px;
+    border-right-width: 2px;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    border-left-color: rgba(219, 49, 192, 255);
+    border-right-color: rgba(219, 49, 192, 255);
+    border-top-color: rgba(219, 49, 192, 255);
+    border-bottom-color: rgba(219, 49, 192, 255);
+    border-top-left-radius: 1px;
+    border-bottom-left-radius: 1px;
+    border-top-right-radius: 1px;
+    border-bottom-right-radius: 1px;
+}
