--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
@@ -31,33 +31,58 @@ BehaviorTreeDecoratorView {
     border-bottom-right-radius: 4px;
 }
 
-.markLabel {
-    border-left-color: rgba(107, 24, 108, 255);
-    border-right-color: rgba(107, 24, 108, 255);
-    border-top-color: rgba(107, 24, 108, 255);
-    border-bottom-color: rgba(107, 24, 108, 255);
-    border-left-width: 1px;
-    border-right-width: 1px;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    background-color: rgba(36, 159, 188, 255);
+.decorator .title#title-label {
+    flex-grow: 1;
+    margin-right: 10px;
 }
 
-.markContainer {
+.markerContainer {
     flex-direction: row;
     flex-shrink: 0;
-    right: 0;
+    right: 4px;
     position: relative;
-    border-left-width: 2px;
-    border-right-width: 2px;
-    border-top-width: 2px;
-    border-bottom-width: 2px;
-    border-left-color: rgba(219, 49, 192, 255);
-    border-right-color: rgba(219, 49, 192, 255);
-    border-top-color: rgba(219, 49, 192, 255);
-    border-bottom-color: rgba(219, 49, 192, 255);
+    border-left-width: 0;
+    border-right-width: 0;
+    border-top-width: 0;
+    border-bottom-width: 0;
+    border-left-color: rgb(219, 49, 192);
+    border-right-color: rgb(219, 49, 192);
+    border-top-color: rgb(219, 49, 192);
+    border-bottom-color: rgb(219, 49, 192);
     border-top-left-radius: 1px;
     border-bottom-left-radius: 1px;
     border-top-right-radius: 1px;
     border-bottom-right-radius: 1px;
+    align-items: flex-end;
+}
+
+.marker {
+    width: 18px;
+    height: 18px;
+}
+
+.markerLabel {
+    border-left-color: rgb(156, 154, 156);
+    border-right-color: rgb(156, 154, 156);
+    border-top-color: rgb(156, 154, 156);
+    border-bottom-color: rgb(156, 154, 156);
+    border-left-width: 1px;
+    border-right-width: 1px;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    background-color: rgb(58, 58, 58);
+    font-size: 10px;
+    -unity-text-align: lower-left;
+    white-space: nowrap;
+    color: rgb(135, 135, 135);
+}
+
+.markerLabel.enableMarker {
+    border-left-color: rgb(236, 236, 236);
+    border-right-color: rgb(236, 236, 236);
+    border-top-color: rgb(236, 236, 236);
+    border-bottom-color: rgb(236, 236, 236);
+    background-color: rgb(78, 41, 132);
+    color: rgb(255, 255, 255);
+    -unity-font-style: bold;
 }
