增加开关显示装饰marker

--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeDecoratorView.uss
@@ -35,6 +35,10 @@ BehaviorTreeDecoratorView {
     flex-grow: 1;
 }
 
+.disable_decoratorMarker .decorator .markerContainer {
+    display: none;
+}
+
 .markerContainer {
     flex-direction: row;
     flex-shrink: 0;
