浮动提示开关移动到prefs

--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeEditor.uss
@@ -54,6 +54,10 @@ BehaviorTreeView .debug {
     max-width: 280px;
 }
 
+.disable_floatingTip .floatingTip{
+    display: none;
+}
+
 .customTip {
     min-height: 0;
 }
