--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss
@@ -1,4 +1,4 @@
-﻿.node #node-border {
+.node #node-border {
     background-color: rgba(64, 64, 64, 0.75);
 }
 
@@ -34,31 +34,34 @@
     background-color: rgb(64, 64, 64);
 }
 
-.node .portContainer {
-    max-height: 18px;
+.portContainer {
+    align-items: center;
+    flex-direction: row;
+    padding-left: 32px;
+    padding-right: 32px;
 }
 
 #input > .port {
-    flex-direction: column;
 }
 
 #output > .port {
-    flex-direction: column-reverse;
 }
 
 .node .port {
     flex-grow: 1;
-    padding-left: 20px;
-    padding-right: 20px;
+    flex-direction: row;
+    align-items: center;
+    max-height: 18px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
-#connector.connectorBox {
-    min-width: 0;
-}
-
-.node Port > Label {
+.port > #type {
     visibility: visible;
     display: none;
+    position: absolute;
 }
 
 .port #cap {
@@ -68,6 +71,8 @@
 }
 
 .port > #connector.connectorBox {
+    height: 100%;
+    width: initial;
     flex-grow: 1;
     border: 0;
     border-left-width: 0;
@@ -79,16 +84,15 @@
     border-bottom-left-radius: 4;
     border-top-right-radius: 4;
     border-bottom-right-radius: 4;
-    align-items: center;
     min-width: 80px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .port > #connector.connectorBox:hover {
     background-color: rgba(210, 180, 1, 0.75);
-}
-
-.port > #type {
-    display: none;
 }
 
 .decoratorContainer {
@@ -117,15 +121,15 @@
     border-bottom-right-radius: 6px;
 }
 
-.decoratorList #unity-content-container #注释{
+.decoratorList #unity-content-container #注释 {
     border-left-width: 2px;
     border-right-width: 2px;
     border-top-width: 2px;
     border-bottom-width: 2px;
-    border-left-color: rgba(0, 59, 136, 255);
-    border-right-color: rgba(0, 59, 136, 255);
-    border-top-color: rgba(0, 59, 136, 255);
-    border-bottom-color: rgba(0, 59, 136, 255);
+    border-left-color: rgb(0, 59, 136);
+    border-right-color: rgb(0, 59, 136);
+    border-top-color: rgb(0, 59, 136);
+    border-bottom-color: rgb(0, 59, 136);
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -149,12 +153,9 @@
     padding-right: 1px;
 }
 
-.decoratorList .unity-scroller #注释{
+.decoratorList .unity-scroller #注释 {
     display: none;
     visibility: hidden;
     overflow: hidden;
     position: absolute;
 }
-
-
-
