--- a/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
+++ b/UnityAI/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uxml
@@ -2,7 +2,7 @@
     <Style src="project://database/Packages/com.megumin.ai/Editor/BehaviorTree/Resources/BehaviorTreeNodeView.uss?fileID=7433441132597879392&amp;guid=2c83cb8392a86ce4fbab7c0424257963&amp;type=3#BehaviorTreeNodeView" />
     <ui:VisualElement name="node-border">
         <ui:VisualElement name="top">
-            <ui:VisualElement name="input" class="portContainer" style="flex-direction: column; align-items: center;" />
+            <ui:VisualElement name="input" class="portContainer" />
             <ui:VisualElement name="divider" class="vertical" />
             <ui:VisualElement name="decorator" class="decoratorContainer">
                 <ui:ListView class="decoratorList" />
@@ -21,7 +21,7 @@
                     <ui:VisualElement name="divider" class="horizontal" />
                 </ui:VisualElement>
             </ui:VisualElement>
-            <ui:VisualElement name="output" class="portContainer" style="align-items: center;" />
+            <ui:VisualElement name="output" class="portContainer" />
         </ui:VisualElement>
     </ui:VisualElement>
     <ui:VisualElement name="selection-border" picking-mode="Ignore" />
